# Circleville

./: .gitignore  .gitmodules  Project.xml  readme.txt
Android/: build.py
Android/Android-Modern/: gradle.properties  settings.gradle
Android/Android-Modern/app/: build.gradle
Android/Android-Modern/app/src/main/: AndroidManifest.xml
Android/Android-Modern/app/src/main/java/com/piercelbrooks/circleville/app/: MainActivity.java
Android/Android-Modern/sfml/: build.gradle
Android/Android-Modern/sfml/src/main/: AndroidManifest.xml
Android/Android-Modern/sfml/src/main/java/com/piercelbrooks/circleville/: SFMLActivity.java
Android/Android-Modern/sfml/src/main/java/com/piercelbrooks/sfml/: SFMLActivity.java
Android/Android-Modern/sfml/src/main/res/values/: strings.xml
Android/Android-Modern/testbed/src/main/: AndroidManifest.xml
Android/Trunk/include/: Log.hpp
Android/Trunk/src/: CMakeLists.txt  main.cpp
Project/circleville/include/cv/: Circleville.hpp  Random.hpp
Project/circleville/src/: main.cpp
Project/circleville/src/cv/: Circleville.cpp  Random.cpp
